--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "homepage": "https://github.com/timbophillips/_sandbox_ts_webpack#readme",
   "devDependencies": {
+    "ejs-loader": "^0.3.3",
     "html-webpack-plugin": "^3.2.0",
-    "html-webpack-template": "^6.2.0",
     "ts-loader": "^6.0.0",
     "typescript": "^3.4.5",
     "webpack": "^4.30.0",
