--- a/package.json
+++ b/package.json
@@ -22,13 +22,19 @@
   },
   "homepage": "https://github.com/timbophillips/_sandbox_ts_webpack#readme",
   "devDependencies": {
+    "css-loader": "^2.1.1",
     "ejs-loader": "^0.3.3",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
     "ts-loader": "^6.0.0",
     "typescript": "^3.4.5",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0"
+  }
 }
