--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "html-loader": "^0.5.5",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0"
   }
