--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^4.3.1",
     "html-loader": "^0.5.5",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "rxdb": "^8.1.0"
   }
 }
