--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "html-loader": "^0.5.5",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
-    "rxdb": "^8.1.0"
+    "pouchdb-adapter-idb": "^7.0.0",
+    "rxdb": "^8.1.0",
+    "rxjs": "^6.5.2"
   }
 }
